--- a/Config.json
+++ b/Config.json
@@ -1,5 +1,5 @@
 {
- "OWNER_USER_NAME": "YOUR_USERNAME_HERE",
- "TELEGRAM_TOKEN": "YOUR_TOKEN_HERE",
- "BOT_NAME" : "YOUR_NAME_HERE"
+ "OWNER_USER_NAME": "SLG_TECH",
+ "TELEGRAM_TOKEN": "7329996416:AAG58moZ49cNaVpRlJJrq2dgcl3LJlA00W8",
+ "BOT_NAME" : "Richy_by_legeek_bot"
  }
